# toyds

./: demo.py  pyproject.toml  readme.md
configs/: small.yml
scripts/: wandb_clean.py
src/toyds/: __init__.py  config.py  core.py  data.py  model.py  modules.py  needle.py  train.py  utils.py
src/toyds/tasks/: needle.py  task.py  translation.py
src/toyds/tasks/functional/: math.py  translation.py
