[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toyds"
description = "Toy datasets for training sequence models"
version = "0.0.1"
dependencies = [
    "einops",
    "torch",
    "numpy",
    "wandb",
    "pydantic",
    "tqdm",
]

[tool.setuptools]
package-dir = { "" = "src" }

